--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-tab-view": "^4.1.3",
     "react-native-toast-notifications": "^3.4.0",
+    "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "tailwindcss": "^3.4.18"
