--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@shopify/react-native-skia": "^2.4.3",
     "expo": "54.0.22",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
@@ -37,16 +38,19 @@
     "react-native": "0.81.5",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-gifted-charts": "^1.4.68",
     "react-native-pager-view": "6.9.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-tab-view": "^4.1.3",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "^3.4.18",
+    "victory-native": "^41.20.2"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
