--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@shopify/react-native-skia": "^2.4.3",
+    "dayjs": "^1.11.19",
     "expo": "54.0.22",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
