--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
+    "expo-updates": "~29.0.15",
     "expo-web-browser": "~15.0.9",
     "firebase": "^12.5.0",
     "nativewind": "^4.2.1",
